test/npm/typescript/openfl/errors/ArgumentErrorTest.ts
import ArgumentError from "openfl/errors/ArgumentError";
import * as assert from "assert";


describe ("TypeScript | ArgumentError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var argumentError = new ArgumentError ();
		assert.notEqual (argumentError, null);
		
	});
	
	
});